Repaired text alignment issue for smaller screens

--- a/src/styles/less/ChildDashboard.less
+++ b/src/styles/less/ChildDashboard.less
@@ -118,6 +118,7 @@
     @media @tablet, @mobile {
       padding: 0%;
       font-size: 2.5rem;
+      text-align: center;
     }
   }
 
